[package]
name = "subgraph-wasm-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-stream = "0.3.5"
async-trait = "0.1.74"
bigdecimal = { version = "0.4.2", features = ["serde"] }
bs58 = "0.5.0"
convert_case = "0.6.0"
env_logger = "0.10.0"
ethabi = "18.0.0"
figment = { version = "0.10.11", features = ["env", "json", "toml", "yaml"] }
futures-util = "0.3.29"
hex = "0.4.3"
kanal = "0.1.0-pre8"
lazy_static = "1.4.0"
log = "0.4.20"
num-bigint = "0.4.4"
num-traits = "0.2.17"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.27"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
wasmer = "4.2.2"
web3 = "0.19.0"
tiny-keccak = "2.0.2"
nats = "0.24.1"
scylla = "0.10.1"
apollo-parser = "0.7.3"
prometheus = "0.13.3"
warp = "0.3.6"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
rstest = "0.18.2"
