[package]
name = "datafast-runtime"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
bigdecimal = { version = "0.4.2", features = ["serde"] }
bs58 = "0.5.0"
env_logger = "0.10.0"
ethabi = "18.0.0"
figment = { version = "0.10.11", features = ["env", "json", "toml", "yaml"] }
futures-util = "0.3.29"
hex = "0.4.3"
kanal = "0.1.0-pre8"
log = "0.4.20"
num-bigint = "0.4.4"
num-traits = "0.2.17"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.27"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
web3 = "0.19.0"
tiny-keccak = "2.0.2"
scylla = { version = "0.10.1", optional = true }
mongodb = { version = "2.7.1", optional = true}
apollo-parser = "0.7.3"
prometheus = "0.13.3"
warp = "0.3.6"
tokio-retry = "0.3.0"
deltalake = { version = "0.16.5", features = ["s3", "datafusion"] }
rayon = "1.8.0"
prost = "0.12.3"
wasmer = "4.2.4"

[features]
default = ["mongo"]
scylla = ["dep:scylla"]
mongo = ["dep:mongodb"]

[dev-dependencies]
convert_case = "0.6.0"
rstest = "0.18.2"
