[package]
name = "datafast-runtime"
version = "0.2.1"
edition = "2021"
homepage = "https://runtime.datafast.network/"
repository = "https://github.com/datafast-network/datafast-runtime"
description = "DataFast Runtime"
license = "Apache-2.0"
keywords = ["indexer", "subgraph", "blockchain", "ethereum", "subgraph-runtime"]


[dependencies]
async-trait = "0.1.74"
bigdecimal = { version = "0.4.2", features = ["serde"] }
bs58 = "0.5.0"
ethabi = "18.0.0"
figment = { version = "0.10.11", features = ["env", "json", "toml", "yaml"] }
futures-util = "0.3.29"
hex = "0.4.3"
kanal = "0.1.0-pre8"
num-bigint = "0.4.4"
num-traits = "0.2.17"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.27"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
web3 = "0.19.0"
tiny-keccak = "2.0.2"
apollo-parser = "0.7.3"
prometheus = "0.13.3"
warp = "0.3.6"
tokio-retry = "0.3.0"
rayon = "1.8.0"
prost = "0.12.3"
wasmer = "4.2.4"
regex = "1.10.2"
df-logger = {git = "https://github.com/datafast-network/df-logger.git", branch = "main", version = "0.1.5"}


deltalake = { version = "0.17.1", features = ["s3", "datafusion"], optional = true }
scylla = { version = "0.12.0", optional = true }
mongodb = { version = "2.7.1", optional = true }
google-cloud-pubsub = { version = "0.24.0", optional = true }
lz4 = { version = "1.24.0", optional = true }

[features]
default = ["mongo", "deltalake"]
scylla = ["dep:scylla"]
mongo = ["dep:mongodb"]
deltalake = ["dep:deltalake"]
pubsub = ["dep:google-cloud-pubsub", "dep:lz4"]
mongsub = ["mongo", "pubsub"]

[dev-dependencies]
convert_case = "0.6.0"
rstest = "0.19.0"
